deploy/trinitylog-client/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: trinitylog-client
  namespace: trinitylog
spec:
  selector:
    app: trinitylog-client
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
