deploy/trinitylog-client/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: trinitylog-client-ingress
  namespace: trinitylog
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  ingressClassName: nginx
  rules:
  - host: trinity-log.in
    http:
      paths:
      - path: /
        pathType: Prefix
        backend :
          service:
            name: trinitylog-client
            port:
              number: 3000
